@@ -1225,17 +1225,17 @@ track_title
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">label27</property>
 			      <property name="use_underline">False</property>
-			      <property name="use_markup">False</property>
+			      <property name="use_markup">True</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
-			      <property name="wrap">False</property>
+			      <property name="wrap">True</property>
 			      <property name="selectable">False</property>
-			      <property name="xalign">0.5</property>
+			      <property name="xalign">0</property>
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">0</property>
 			      <property name="ypad">0</property>
-			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			      <property name="ellipsize">PANGO_ELLIPSIZE_START</property>
 			      <property name="width_chars">-1</property>
-			      <property name="single_line_mode">False</property>
+			      <property name="single_line_mode">True</property>
 			      <property name="angle">0</property>
 			    </widget>
 			    <packing>
