@@ -1,5 +1,6 @@
 2005-11-06 Gautier Portet <kassoulet gmail com>
 	* drag and drop is now able to import a folder.
+	* better display of example filename in preferences.
 
 2005-11-02 Gautier Portet <kassoulet gmail com>
 	* fixed tree structure being lost when importing folders 
